--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   english_words: ^3.1.0
+  transparent_image: ^0.1.0
+  cached_network_image: ^2.2.0
 
 dev_dependencies:
   flutter_test:
