--- a/github_client_app/pubspec.yaml
+++ b/github_client_app/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   json_annotation: ^4.4.0
+  shared_preferences: ^2.0.13
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
